# SPcrime

./: LICENSE  Makefile.txt  README.md  editorconfig.txt  manifest.in  pyproject.toml
src/: SPCrime.py
src/SPCrime/: SPCrime.py
src/SPCrime/data/: districts.tsv
src/SPCrime/data/pop/: district.xlsx  state.xlsx
